# 10x-at

./: .env.example  .env.template  .gitignore  AGENTS.md  CONVENTIONS.md  MIGRATION.md  README.md  REFACTORING_SUMMARY.md  app.py  conftest.py  pyproject.toml  requirements.txt  setup.ps1  setup.sh  yoyo.ini
banking/: __init__.py  banking.py  test_banking.py  types.py
db/: __init__.py  connection.py  crud.py  models.py
docs/: at_engine_mermaid.html
migrations/: 0001_initial_schema.py  0002_sample_data.py  0010_create_schemas.sql  0030_create_trans_tables.sql  0110_create_user_config.sql  0130_at.sql  README.md
python/config/: globals.py
python/database/: __init__.py  crud.py  reporting.py  users.py
python/etl/: calc_accum.py
python/tools/: encryption.py  logger.py  show_db_structure.py  utils.py
python/ui/: README.md  auth.py  instrument_view.py  main.py  user_management.py  user_management_bash.py
tests/: test_db.py  test_users.py
